--- a/EXERCÍCIOS/CAPÍTULO 11/index.html
+++ b/EXERCÍCIOS/CAPÍTULO 11/index.html
@@ -14,5 +14,13 @@
         <source media="(max-width: 1050px)" srcset="imagens/M.png" type="image/png">
         <img src="imagens/G.png" alt="Imagem Flexível">
     </picture>
+
+    <h1>Reproduzindo Áudio</h1>
+    <p>Vamos aprender a reproduzir áudios HTML5.</p>
+    <audio preload="metadata" autoplay controls>
+        <source src="midia/guanacast-33.mp3" type="audio/mp3">
+        <source src="midia/guanacast-33.ogg" type="audio/ogg">
+        <p>Infelizmente seu navegador não consegue reproduzir aúdio. <a href="midia/guanacast-33.mp3">Clique aqui para fazer o dowload do arquivo MP3.</a></p>
+    </audio>
 </body>
 </html>
