--- a/MÓDULO 2/EXERCÍCIOS/CAPÍTULO 14/ex017/fonte01.html
+++ b/MÓDULO 2/EXERCÍCIOS/CAPÍTULO 14/ex017/fonte01.html
@@ -13,7 +13,25 @@
             16px = 1em 
             recomendação: em
             */
-            font-size: em;
+            font-size: 1em;
+            /* */
+            /* lighter, normal, bold, bolder */
+            }
+
+        h1 {
+            /*font-family: 'Work Sans', sans-serif;
+            font-weight: bolder;
+            font-size: 3em;
+            font-style: italic;
+
+            shorthand font 
+            font-style -> font-weight -> font-size -> font-family
+            */
+            font: italic bolder 3em 'Work Sans', sans-serif;
+        }
+
+        h2{
+            font: bold 2em 'Worl Sans';
         }
     </style>
 </head>
