--- a/MÓDULO 2/EXERCÍCIOS/CAPÍTULO 16/pdf cap.16/ex020/caixa01.html
+++ b/MÓDULO 2/EXERCÍCIOS/CAPÍTULO 16/pdf cap.16/ex020/caixa01.html
@@ -5,21 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modelo de Caixas</title>
     <style>
-        h1 {
+        h1 { /*box level*/
             background-color: lightgray;
             height: 300px;
             width: 300px;
-            border-width: 10px;
-            border-style: solid;
-            border-color: darkslategray;
 
-            padding-top: 10px;
+            /* shorthand */
+
+            /* border-width: 10px;
+            border-style: solid;
+            border-color: darkslategray; */
+            border: 10px solid darkslategray;
+
+            /* padding-top: 10px;
             padding-right: 10px;
             padding-bottom: 10px;
-            padding-left: 10px;
+            padding-left: 10px; */
+            padding: 10px;
+
+            /* margin-top: 20px;
+            margin-right: 20px;
+            margin-bottom: 40px;
+            margin-left: 20px; 
+            margin: 20px 20px 40px 20px;*/
+            margin: 20px auto 40px auto;
+
+            /* outline-width: 5px;
+            outline-style: dashed;
+            outline-color: cadetblue; */
+            outline: 5px dashed cadetblue;
         }
         
-        a {
+         a { /*inline-level */
             border-width: 10px;
             border-style: solid;
             border-color: red;
