--- a/MÓDULO 2/EXERCÍCIOS/CAPÍTULO 16/pdf cap.16/ex021/caixa02.html
+++ b/MÓDULO 2/EXERCÍCIOS/CAPÍTULO 16/pdf cap.16/ex021/caixa02.html
@@ -17,9 +17,15 @@
             margin: 10px;
         }
 
+        h1 {
+            box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.372);
+        }
+
         nav {
             background-color: rgb(114, 112, 112);
             padding: 3px;
+            box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.29);
+            
         }
 
         nav > a {
@@ -57,7 +63,11 @@
             background-color: black;
             color: white;
             text-align: center;
-            padding: 1px;
+            padding: 4px;
+            margin: 0px;
+        }
+
+        footer > p {
             margin: 0px;
         }
     </style>
