--- a/MÓDULO 2/DESAFIOS/DESAFIO 10/android.html
+++ b/MÓDULO 2/DESAFIOS/DESAFIO 10/android.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curiosidade de Tecnologia</title>
+    <title>Como surgiu o mascote do Android</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
