--- a/MÓDULO 2/DESAFIOS/DESAFIO 10/android.html
+++ b/MÓDULO 2/DESAFIOS/DESAFIO 10/android.html
@@ -22,14 +22,14 @@
         <h2 class="fonte">A primeira versão</h2>
 
         <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
-        <img src="pacote projeto 010/imagens/dan-droids.png" alt="">
+        <img src="imagens/dan-droids.png" alt="">
         <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.</p>
         
         <h2 class="fonte">Surge um novo mascote</h2>
         <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
-        <img src="pacote projeto 010/imagens/irina-blok.jpg" alt="">
+        <img src="imagens/irina-blok.jpg" alt="">
         <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.</p>
-        <img src="pacote projeto 010/imagens/bugdroid.png" alt="">
+        <img src="imagens/bugdroid.png" alt="">
         <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.
         </p>
         <video src=""></video>
