--- a/MÓDULO 2/DESAFIOS/DESAFIO 10/android.html
+++ b/MÓDULO 2/DESAFIOS/DESAFIO 10/android.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <h1>Curiosidades de Tecnologia</h1>
+        <h1>CURIOSIDADES DE TECNOLOGIA</h1>
         <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar.</p>
     </header>
 
