--- a/MÓDULO 3/DESAFIOS/DESAFIO 01/index.html
+++ b/MÓDULO 3/DESAFIOS/DESAFIO 01/index.html
@@ -11,11 +11,11 @@
         <h1>Cordel Moderno</h1>
 
         <p>
-            Por <a href="https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a>
+            Por <a href="https://www.recantodasletras.com.br/poesias/3186743"><b>Milton Duarte</b></a>
         </p>
     </header>
 
-    <section>
+    <section class="normal">
         <p>Estou ficando cansado <br>
             Da tal tecnologia<br>
             Só se fala por e-mail<br>
@@ -25,7 +25,7 @@
             Vou dizer tudo em poesia.</p>
     </section>
 
-    <section>
+    <section class="imagem" id="imagem01">
         <p>Não é mais como era antes<br>
             É tudo abreviado<br>
             "Você" só tem duas letras<br>
@@ -35,7 +35,7 @@
             E um coração desenhado.</p>
     </section>
 
-    <section>
+    <section class="normal">
         <p>Arroba agora não pesa<br>
             É parte de um endereço<br>
             Ponto final nem se usa<br>
@@ -54,7 +54,7 @@
             </p>
     </section>
 
-    <section>
+    <section class="imagem" id="imagem02">
         <p>Tenho saudade das cartas<br>
             Escritas com a própria mão<br>
             Mandava no mês de Junho<br>
@@ -65,7 +65,7 @@
             </p>
     </section>
 
-    <section>
+    <section class="normal">
         <p>Agora, escrevo e envio<br>
             Chegando na mesma hora<br>
             Mas quando vou prosear<br>
