--- a/MÓDULO 3/DESAFIOS/DESAFIO 01/index1.html
+++ b/MÓDULO 3/DESAFIOS/DESAFIO 01/index1.html
@@ -2,11 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=imagem, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style1.css">
+    <style>
+        .container {
+            background-image: url(img/background001.jpg);
+            height: 100vh;
+            
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="container"></div>
 </body>
 </html>
