--- a/MÓDULO 3/DESAFIOS/DESAFIO 01/index.html
+++ b/MÓDULO 3/DESAFIOS/DESAFIO 01/index.html
@@ -11,7 +11,7 @@
         <h1>Cordel Moderno</h1>
 
         <p>
-            Por <a href="https://www.recantodasletras.com.br/poesias/3186743"><b>Milton Duarte</b></a>
+            Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank"><b>Milton Duarte</b></a>
         </p>
     </header>
 
