--- a/MÓDULO 3/EXERCÍCIOS/CAPÍTULO 21/ex023/tabela001.html
+++ b/MÓDULO 3/EXERCÍCIOS/CAPÍTULO 21/ex023/tabela001.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,7 +34,7 @@
     HERARQUIA DE TABELAS (simples)
     TABLE = tabela
         TABLE ROW: linha de tabela = <tr>
-            TABLE HEADER: cabeçalho de tabela
+            TABLE HEADER: cabeçalho de tabela <th>
             TABLE DATA: dado de tabela = <td>
     -->
     
