atualização da aula 29

--- a/MÓDULO 3/EXERCÍCIOS/CAPÍTULO 21/ex023/tabela002.html
+++ b/MÓDULO 3/EXERCÍCIOS/CAPÍTULO 21/ex023/tabela002.html
@@ -24,6 +24,10 @@
             color: white;
         }
 
+        td.num {
+            text-align: right;
+        }
+
     </style>
 </head>
 <body>
@@ -50,39 +54,105 @@
         <tbody>
             <tr>
                 <td>São Paulo</td>
-                <td>45.973.190</td>
+                <td class="num">45.973.190</td>
             </tr>
 
             <tr>
                 <td>Minas Gerais</td>
-                <td>21.322.692</td>
+                <td class="num">21.322.692</td>
             </tr>
 
             <tr>
                 <td>Rio de Janeiro</td>
-                <td>17.219.679</td>
+                <td class="num">17.219.679</td>
             </tr>
 
             <tr>
                 <td>Bahia</td>
-                <td>14.850.513</td>
+                <td class="num">14.850.513</td>
             </tr>
 
             <tr>
                 <td>Paraná</td>
-                <td>11.824.665</td>
+                <td class="num">11.824.665</td>
             </tr>
 
             <tr>
                 <td>Rio Grande do Sul</td>
-                <td>11.229.915</td>
+                <td class="num">11.229.915</td>
             </tr>
+
+            <tr>
+                <td>Pernambuco</td>
+                <td class="num">9.539.029</td>
+            </tr>
+
+            <tr>
+                <td>Ceará</td>
+                <td class="num">9.233.656</td>
+            </tr>
+
+            <tr>
+                <td>Pará</td>
+                <td class="num">8.664.306</td>
+            </tr>
+
+            <tr>
+                <td>Santa Catarina</td>
+                <td class="num">8.058.447</td>
+            </tr>
+
+            <tr>
+                <td>Goiás</td>
+                <td class="num">7.350.483</td>
+            </tr>
+
+            <tr>
+                <td>Maranhão</td>
+                <td class="num">7.010.960</td>
+            </tr>
+
+            <tr>
+                <td>Amazonas</td>
+                <td class="num">4.281.209</td>
+            </tr>
+
+            <tr>
+                <td>Paraíba</td>
+                <td class="num">4.145.040</td>
+            </tr>
+
+            <tr>
+                <td>Espírito Santo</td>
+                <td class="num">4.102.129</td>
+            </tr>
+
+            <tr>
+                <td>Mato Grosso</td>
+                <td class="num">3.836.399</td>
+            </tr>
+
+            <tr>
+                <td>Rio Grande do Norte</td>
+                <td class="num">3.446.071</td>
+            </tr>
+
+            <tr>
+                <td>Piauí</td>
+                <td class="num">3.375.646</td>
+            </tr>
+
+            <tr>
+                <td>Alagoas</td>
+                <td class="num">3.220.104</td>
+            </tr>
+
         </tbody>
 
         <tfoot>
             <tr>
                 <th>Total de habitantes</th>
-                <td>000000000</td>
+                <td class="num"><strong>198.684.133</strong></td>
             </tr>  
         </tfoot>
 
